<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_add_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/t_add_name"
        android:layout_alignBaseline="@+id/et_add_name"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_add_tag"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/t_add_tag"
        android:layout_marginTop="90dp"
        android:layout_alignBaseline="@+id/et_add_tag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_add_name"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_add_name"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/tv_add_name"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_toEndOf="@id/tv_add_name" />

    <EditText
        android:id="@+id/et_add_tag"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_add_tag"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@id/tv_add_tag"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_toEndOf="@id/tv_add_tag" />

    <ImageButton
        android:id="@+id/ib_dialog_view_top"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"


        android:scaleType="fitXY"
        app:srcCompat="@drawable/add_top"
        android:contentDescription="@string/i_view_top" />

</RelativeLayout>