<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding= "16dp">


    <TextView
        android:id="@+id/tv_add_nameB"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/t_add_nameB"
        android:layout_alignBaseline="@+id/et_add_Bname"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_add_tagB"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/t_add_tagB"
        android:layout_marginTop="90dp"
        android:layout_alignBaseline="@+id/et_add_Btag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_add_Bname"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_add_Bname"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/tv_add_nameB"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_toEndOf="@id/tv_add_nameB" />

    <EditText
        android:id="@+id/et_add_Btag"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:hint="@string/e_add_Btag"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@id/tv_add_tagB"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_toEndOf="@id/tv_add_tagB" />

</RelativeLayout>