<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:hint="@string/t_add_name"
        android:inputType="text"
        android:importantForAutofill="no"
        android:ems="10"/>

    <EditText
        android:id="@+id/et_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/t_add_tag"
        android:importantForAutofill="no"
        android:ems="20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reupload_pic"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_margin="20dp"
        android:contentDescription="@string/reupload_pic"
        android:src="@drawable/insert_photos" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:contentDescription="@string/upload"/>

</LinearLayout>