<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity__addtops">

    <TextView
        android:id="@+id/tv_add_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_add_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="111dp"
        android:text="@string/t_add_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_add_tag"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_add_tag"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="33dp"
        android:text="@string/t_add_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_name" />

    <EditText
        android:id="@+id/et_add_name"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_toEndOf="@id/tv_add_name"
        android:layout_toRightOf="@id/tv_add_name"
        android:hint="@string/e_add_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_add_tag"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_toEndOf="@id/tv_add_tag"
        android:layout_toRightOf="@id/tv_add_tag"
        android:hint="@string/e_add_tag"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_name" />

    <ImageButton
        android:id="@+id/ib_dialog_view_top"
        android:layout_width="200dp"
        android:layout_height="200dp"


        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:contentDescription="@string/i_view_top"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_top" />

    <Button
        android:id="@+id/btn_addtops_add"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/add_now"

        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_dialog_view_top" />
</androidx.constraintlayout.widget.ConstraintLayout>