<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:hint="@string/t_add_name"
        android:inputType="text"
        android:importantForAutofill="no"
        android:ems="10"/>

    <ImageView
        android:id="@+id/iv_phototop"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"
        android:contentDescription="@string/reupload_pic"
        android:src="@drawable/insert_photos" />

    <ImageView
        android:id="@+id/iv_photobottom"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"
        android:contentDescription="@string/reupload_pic"
        android:src="@drawable/insert_photos" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:contentDescription="@string/upload"/>

</LinearLayout>