<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_addnewitem">

    <TextView
        android:id="@+id/tv_view_inventory"

        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="20dp"
        android:text="@string/t_view_inventory"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/tv_view_top_or_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_view_top_or_bottom"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:text="@string/t_view_top_or_bottom"
        app:layout_constraintBottom_toTopOf="@+id/ib_view_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_view_top"
        android:layout_width="200dp"
        android:layout_height="200dp"


        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/i_view_top"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/ib_view_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_view_top_or_bottom"
        app:srcCompat="@drawable/add_top" />

    <ImageButton
        android:id="@+id/ib_view_bottom"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:contentDescription="@+id/i_view_bottom"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_view_top"
        app:srcCompat="@drawable/add_bottom" />


</androidx.constraintlayout.widget.ConstraintLayout>